--- a/Modules/Sources/SamplesImage/Views/ImageProcessingViewController.xib
+++ b/Modules/Sources/SamplesImage/Views/ImageProcessingViewController.xib
@@ -25,38 +25,40 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TLn-BY-WfQ" userLabel="container">
                     <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="116-mX-hru">
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1g4-ey-bFk">
                             <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
-                        </imageView>
+                            <subviews>
+                                <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Sqv-Hi-fIz">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="130"/>
+                                    <color key="backgroundColor" white="1" alpha="0.25263815724377064" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="130" id="LcD-rg-v47"/>
+                                    </constraints>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="q8c-jq-3jZ">
+                                        <size key="itemSize" width="120" height="120"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="116-mX-hru">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
+                                </imageView>
+                            </subviews>
+                        </stackView>
                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="zk4-EO-DvS">
                             <rect key="frame" x="178" y="361" width="37" height="37"/>
                             <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </activityIndicatorView>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Sqv-Hi-fIz">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="130"/>
-                            <color key="backgroundColor" white="1" alpha="0.25263815724377064" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="130" id="LcD-rg-v47"/>
-                            </constraints>
-                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="q8c-jq-3jZ">
-                                <size key="itemSize" width="120" height="120"/>
-                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            </collectionViewFlowLayout>
-                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="116-mX-hru" secondAttribute="bottom" id="0Bv-Mn-Z8F"/>
-                        <constraint firstItem="Sqv-Hi-fIz" firstAttribute="top" secondItem="TLn-BY-WfQ" secondAttribute="top" id="BBW-9T-Ug6"/>
-                        <constraint firstItem="116-mX-hru" firstAttribute="top" secondItem="TLn-BY-WfQ" secondAttribute="top" id="Glo-SB-KqT"/>
+                        <constraint firstItem="1g4-ey-bFk" firstAttribute="leading" secondItem="TLn-BY-WfQ" secondAttribute="leading" id="4Rd-mO-Mro"/>
+                        <constraint firstAttribute="trailing" secondItem="1g4-ey-bFk" secondAttribute="trailing" id="DrQ-MF-KFj"/>
+                        <constraint firstItem="1g4-ey-bFk" firstAttribute="top" secondItem="TLn-BY-WfQ" secondAttribute="top" id="afP-RG-E6W"/>
                         <constraint firstItem="zk4-EO-DvS" firstAttribute="centerY" secondItem="TLn-BY-WfQ" secondAttribute="centerY" id="br4-8r-AaA"/>
-                        <constraint firstAttribute="trailing" secondItem="116-mX-hru" secondAttribute="trailing" id="d8i-00-5DY"/>
-                        <constraint firstAttribute="trailing" secondItem="Sqv-Hi-fIz" secondAttribute="trailing" id="ee1-6S-NsW"/>
-                        <constraint firstItem="Sqv-Hi-fIz" firstAttribute="leading" secondItem="TLn-BY-WfQ" secondAttribute="leading" id="iSX-Ff-gQD"/>
+                        <constraint firstAttribute="bottom" secondItem="1g4-ey-bFk" secondAttribute="bottom" id="s6o-ld-Wu0"/>
                         <constraint firstItem="zk4-EO-DvS" firstAttribute="centerX" secondItem="TLn-BY-WfQ" secondAttribute="centerX" id="vwP-A8-Oy9"/>
-                        <constraint firstItem="116-mX-hru" firstAttribute="leading" secondItem="TLn-BY-WfQ" secondAttribute="leading" id="zXy-MF-2Rf"/>
                     </constraints>
                 </view>
             </subviews>
